@@ -22,11 +22,13 @@ import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 
+import org.bukkit.Bukkit;
 import org.bukkit.Server;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
+import org.bukkit.permissions.PermissionDefault;
 
 import com.avaje.ebean.EbeanServer;
 
@@ -57,6 +59,7 @@ public class SetCommand extends AbstractCommand implements TabExecutor {
 		super();
 		this.server = plugin.getServer();
 		this.database = plugin.getDatabase();
+		Bukkit.getPluginManager().getPermission("hearthstone.set.own").setDefault(PermissionDefault.TRUE);
 	}
 
 	public void execute(final List<String> arguments, final CommandSender sender) {
