@@ -1,5 +1,6 @@
 Changelog for Hearthstone (v1.4.1-SNAPSHOT)
 
+2013-05-30 17:55:50 +0100    finish updating (James Richardson)
 2013-05-30 05:08:53 +0100    remove debugging output (James Richardson)
 2013-05-30 05:08:33 +0100    refactoring and update to use latest bukkit utilities (James Richardson)
 2013-05-30 04:12:18 +0100    update pom fix relocation of utilities into another plugins name space (James Richardson)
